Do not add bundled plugins to classpath